--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 </project>
 <distributionManagement>
         <repository>
-            <id>nexus-artifact</id>
+            <id>Nexus-Artifact</id>
 	    <name>Release</name>
             <url>http://10.0.2.15:8081/nexus/content/repositories/Nexus-Artifact</url> 
         </repository>
