--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.jitpack</groupId>
-  <artifactId>maven-simple</artifactId>
-  <version>0.2-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <groupId>Rajasekhar</groupId>
+  <artifactId>Nexus Project</artifactId>
+  <version>1.0</version>
+  <packaging>war</packaging>
 
-  <name>Simple Maven example</name>
+  <name>Nexus Project</name>
   <url>https://jitpack.io/#jitpack/maven-simple/0.1</url>
 
   <dependencies>
