--- a/pom.xml
+++ b/pom.xml
@@ -71,4 +71,11 @@
             <url>http://10.0.2.15:8081/nexus/content/repositories/snapshots/</url>    
         </snapshotRepository>
 </distributionManagement> 
+<plugin>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.6</version>
+  <configuration>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+  </configuration>
+</plugin>
 </project>
