--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                     <execution>
                         <id>attach-sources</id>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>war</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -52,7 +52,7 @@
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>war</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -71,11 +71,4 @@
             <url>http://10.0.2.15:8081/nexus/content/repositories/snapshots/</url>    
         </snapshotRepository>
 </distributionManagement> 
-<plugin>
-  <artifactId>maven-war-plugin</artifactId>
-  <version>2.6</version>
-  <configuration>
-    <failOnMissingWebXml>false</failOnMissingWebXml>
-  </configuration>
-</plugin>
 </project>
